# catshi

./: .gitignore  Cargo.toml  TODO.md  backup.sh
api/: Cargo.toml
api/src/: catfishing.rs  error.rs  main.rs  state.rs
bot/: Cargo.toml
bot/src/: blackjack.rs  main.rs  portfolio.rs  trade.rs  ui.rs
bot/src/command/: blackjack.rs  leaderboard.rs  resolve.rs  tip.rs  trade.rs  transfer.rs
bot/src/ui/: trade_flow.rs
common/: Cargo.toml
common/migrations/: 20260420034939_transfer-type.sql  20260509012920_tip-command.sql  20260604052657_catfishing.sql
common/src/: lib.rs  store.rs
common/src/store/: catfishing.rs  order.rs  tip.rs
frontend/: index.html  pnpm-lock.yaml
frontend/src/: App.tsx
migrations/: 20260403203653_user.sql  20260403215118_market.sql  20260404065716_market-channel-id.sql  20260404071813_instrument.sql  20260405070126_position.sql  20260407041648_position-revamp.sql  20260407052321_order.sql  20260408050014_cash-transactions.sql  20260409052627_transfer-ts.sql  20260425055708_blackjack.sql  20260506061311_market-details-msg.sql
migrations/01-user/: up.sql
migrations/02-user-unique/: down.sql  up.sql
src/: blackjack.rs  bot.rs  command.rs  currency.rs  main.rs  portfolio.rs  store.rs  trade.rs  ui.rs  utils.rs
src/command/: blackjack.rs  leaderboard.rs  market.rs  market_details.rs  open_markets.rs  register.rs  resolve.rs  tip.rs  trade.rs  transfer.rs
src/store/: blackjack.rs  instrument.rs  market.rs  order.rs  position.rs  tip.rs  transfer.rs  user.rs
src/ui/: blackjack.rs  market_create_modal.rs  market_message.rs  trade_flow.rs
