[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = [ "macros" ] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15.7"
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite" ] }
common = { version = "0.1.0", path = "../common" }
anyhow = "1.0.102"
serde = "1.0.228"

